syntax = "proto3";

package dnf.v1;

option go_package = "github.com/pixb/DnfGameServer/dnf-go-client/gen/dnf/v1;dnfv1";

import "dnf/v1/common.proto";

// 世界BOSS消息类型
message RES_WORLD_BOSS_INFO {
  int32 error = 1;
  int32 bossId = 2;
  string bossName = 3;
  int64 hp = 4;
  int64 maxHp = 5;
  int32 remainingTime = 6;
}

message RES_WORLDBOSS_RANKING {
  int32 error = 1;
  repeated WorldBossRank ranks = 2;
}

message RES_WORLD_BOSS_DAMAGE {
  int32 error = 1;
  int64 damage = 2;
  int32 rank = 3;
}

message WorldBossRank {
  int32 rank = 1;
  string playerName = 2;
  int64 damage = 3;
}

// 存储系统消息类型
message RES_STORAGE_EXTEND {
  int32 error = 1;
  int32 newSize = 2;
  bool success = 3;
}

message RES_STORAGE_STEP {
  int32 error = 1;
  int32 step = 2;
}

// 验证系统消息类型
message RES_VERIFICATION_START {
  int32 error = 1;
  string challenge = 2;
  int32 timeout = 3;
}

message RES_VERIFICATION_EVENT {
  int32 error = 1;
  int32 eventType = 2;
  string eventData = 3;
}

message RES_VERIFICATION_SIMPLE {
  int32 error = 1;
  string token = 2;
  bool success = 3;
}

message SESSION_AUTH {
  string username = 1;
  string password = 2;
  string deviceId = 3;
  string clientVersion = 4;
}

// 福利系统消息类型
message RES_WELFARE_FIND_REWARD_GET {
  int32 error = 1;
  int32 rewardId = 2;
  string rewardName = 3;
  int32 quantity = 4;
  bool success = 5;
}

message RES_WELFARE_FIND_REWARD_INFO {
  int32 error = 1;
  repeated WelfareReward rewards = 2;
}

message WelfareReward {
  int32 id = 1;
  string name = 2;
  int32 quantity = 3;
  bool claimed = 4;
}
